<resources>
    <string name="app_name">L百度音乐</string>
    <string name="fragment_my_login_top">立即登录</string>
    <string name="fragment_my_login_bottom">收藏歌曲永不丢失</string>
    <string name="fragment_my_optional">随便听听</string>
    <string name="fragment_my_mymusic">本地音乐</string>
    <string name="fragment_my_lately">最近播放</string>
    <string name="fragment_my_download">我的下载</string>
    <string name="fragment_my_mysonglist">自建歌单</string>
    <string name="fragment_my_mysonglist_right">新建</string>
    <string name="fragment_my_favorite_above">我最喜欢的单曲</string>
    <string name="fragment_my_collect">我的收藏</string>
    <string name="fragment_my_collect_list">歌单</string>
    <string name="fragment_my_collect_special">专辑</string>
    <string name="fragment_my_collect_singer">歌手</string>
    <string name="fragment_my_collect_article">文章</string>
    <string name="fragment_my_login_parent_bottom">立即登录，让音乐跟着你走</string>
    <string name="fragment_song_list_all">全部</string>
    <string name="fragment_song_list_hot">最热</string>
    <string name="fragment_song_list_new">最新</string>
    <string name="fragment_song_list_pop_head_item">全部</string>
    <string name="fragment_song_list_foot_item">上拉更多</string>
    <string name="fragment_song_list_all_list">选择分类</string>
    <string name="fragment_video_all_list_all">全部</string>
    <string name="fragment_video_all_list_title"> 精选推荐（6）</string>
    <string name="fragment_video_all_list_hinterland">内地</string>
    <string name="fragment_video_all_list_HongKong">港台</string>
    <string name="fragment_video_all_list_Europe">欧美</string>
    <string name="fragment_video_all_list_Jap">日本</string>
    <string name="fragment_video_all_list_Korea">韩国</string>
    <string name="fragment_video_all_list_Live">现场版</string>
    <string name="fragment_ktv_ktv_hot">KTV热歌榜</string>
    <string name="fragment_ktv_chinese">华语金曲</string>
    <string name="fragment_ktv_europe">欧美经典</string>
    <string name="fragment_ktv_man_singer">男歌手</string>
    <string name="fragment_ktv_women_singer">女歌手</string>
    <string name="fragment_ktv_band">乐队组合</string>
    <string name="fragment_ktv_my_ktv">我的K歌</string>
    <string name="fragment_ktv_k_k">搜索K歌伴奏</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="inphonenumber">请输入手机号</string>
    <string name="inpassword">请输入密码</string>
    <string name="third_login">请输入密码</string>
    <string name="weChat">微信</string>
    <string name="sina">微博</string>
    <string name="active">动态</string>
    <string name="playAll">播放全部</string>
    <string name="download"> 下载</string>
    <string name="noRecommend">暂无歌曲推荐信息</string>
    <string name="more">更多</string>
    <string name="loginmore">登录后自动为您同步歌曲</string>
    <string name="mynews">我的消息</string>
    <string name="myintegral">我的积分</string>
    <string name="Vip">成为白金VIP</string>
    <string name="invite">邀请有奖</string>
    <string name="set">设置</string>
    <string name="shop">商城</string>
    <string name="setTime">定时关闭</string>
    <string name="computer">电脑导歌</string>
    <string name="quality">精品应用</string>
    <string name="loginOut">退出登录</string>
    <string name="hotSearch">热门搜索</string>
    <string name="live">直播</string>
    <string name="sjplay">随机播放全部</string>
    <string name="manage">批量管理</string>
    <string name="search">   歌曲，歌手，歌词，朋友，话题</string>
</resources>
