<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_song_list_all_height"

        >
        <ImageView
            android:id="@+id/iv_btn_slide_music_fragment"
            android:src="@mipmap/bt_startpage_bg_press"
            android:layout_width="@dimen/fragment_song_list_left_image_width"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tv_all_song_list_fragment"
            android:text="@string/fragment_song_list_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_btn_slide_music_fragment"
            android:layout_marginLeft="@dimen/fragment_song_list_text_all_margin_left"
            />
        <ImageView
            android:layout_toRightOf="@id/tv_all_song_list_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fragment_song_list_image_pull_margin_left"
            android:src="@mipmap/bt_mv_pull_down_normal"
            />
        <TextView
            android:text="@string/fragment_song_list_new"
            android:id="@+id/tv_new_song_list"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/fragment_song_list_hot_text_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"

            />
        <TextView
            android:textColor="@color/colorIncludeBackground"
            android:text="@string/fragment_song_list_hot"
            android:id="@+id/tv_hot_song_list"
            android:layout_toLeftOf="@id/tv_new_song_list"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/fragment_song_list_hot_text_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"

            />


    </RelativeLayout>

    <GridView
        android:id="@+id/grid_song_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:columnWidth="180dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="20dp"
        />



</LinearLayout>