<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@mipmap/background_main_fragment">

            <LinearLayout
                android:id="@+id/linear_login_myfragment"
                android:layout_width="@dimen/fragment_my_login_LinerLayout_width"
                android:layout_height="@dimen/fragment_my_login_LinerLayout_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/fragment_my_login_LinerLayout_marginBottom"
                android:layout_marginLeft="@dimen/fragment_my_login_LinerLayout_marginLeft"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/bt_sceneplay_singer" />

                <LinearLayout
                    android:layout_width="@dimen/fragment_my_login_LinerLayout_text_width"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    >

                    <TextView

                        style="@style/fragment_my_login_text"
                        android:layout_marginTop="@dimen/fragment_my_login_LinerLayout_text_margin"
                        android:text="@string/fragment_my_login_top" />

                    <TextView
                        style="@style/fragment_my_login_text"
                        android:text="@string/fragment_my_login_bottom" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/fragment_my_login_LinerLayout_height"
                android:layout_height="@dimen/fragment_my_login_LinerLayout_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/fragment_my_login_LinerLayout_optional_margin_bottom"
                android:layout_marginRight="@dimen/fragment_my_login_LinerLayout_optional_margin_bottom"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_mymusic_try_normal" />

                <TextView
                    style="@style/fragment_my_login_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fragment_my_optional"
                    android:textColor="@color/colorFragmentMyLoginText" />


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_my_music_my_fragment"
                style="@style/fragment_my_my_image"
                android:src="@mipmap/ic_mymusic_local_normal" />

            <TextView
                android:id="@+id/tv_myMusic_my_fragment"
                style="@style/fragment_my_my_text_first"
                android:layout_toRightOf="@id/iv_my_music_my_fragment"

                android:text="@string/fragment_my_mymusic" />

            <TextView
                android:id="@+id/tv_myMusic_number_myFragment"
                style="@style/fragment_my_my_text_second"
                android:layout_toRightOf="@id/tv_myMusic_my_fragment"
                android:text="0首" />

            <ImageView
                style="@style/fragment_my_my_image_right"
                android:layout_marginRight="@dimen/fragment_my_mymusic_image_right_margin_right"
                android:src="@mipmap/ic_songlist_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_lately_my_fragment"
                style="@style/fragment_my_my_image"
                android:src="@mipmap/ic_mymusic_play_normal" />

            <TextView
                android:id="@+id/tv_lately_my_fragment"
                style="@style/fragment_my_my_text_first"
                android:layout_toRightOf="@id/iv_lately_my_fragment"
                android:text="@string/fragment_my_mymusic" />

            <TextView
                android:id="@+id/tv_lately_number_myFragment"
                style="@style/fragment_my_my_text_second"
                android:layout_toRightOf="@id/tv_lately_my_fragment"
                android:text="0首" />

            <ImageView
                style="@style/fragment_my_my_image_right"
                android:layout_marginRight="@dimen/fragment_my_lately_image_right_margin_right"
                android:src="@mipmap/btn_more_left_arrow_nor"

                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/iv_download_my_fragment"
                style="@style/fragment_my_my_image"
                android:src="@mipmap/ic_mymusic_download_normal" />

            <TextView
                android:id="@+id/tv_download_my_fragment"
                android:layout_toRightOf="@id/iv_download_my_fragment"
                style="@style/fragment_my_my_text_first"
                android:text="@string/fragment_my_download" />

            <TextView
                android:layout_toRightOf="@id/tv_download_my_fragment"
                android:id="@+id/tv_download_number_myFragment"
                style="@style/fragment_my_my_text_second"
                android:layout_marginLeft="@dimen/fragment_my_mymusic_margin_left"
                android:text="0首" />

            <ImageView
                style="@style/fragment_my_my_image_right"
                android:layout_marginRight="@dimen/fragment_my_lately_image_right_margin_right"
                android:src="@mipmap/btn_more_left_arrow_nor"

                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/fragment_my_mysonglist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fragment_my_mymusic_margin_left"
                android:layout_alignParentBottom="true"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/fragment_my_mysonglist_right"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/fragment_my_lately_image_right_margin_right"
                android:textSize="@dimen/fragment_my_login_LinerLayout_textSize"
                android:textColor="@color/colorFragmentMymyText"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/iv_favorite_my_fragmet"
                android:src="@mipmap/ic_mymusic_like"
                style="@style/fragment_my_my_image"
                 />
            <LinearLayout
                android:layout_toRightOf="@id/iv_favorite_my_fragmet"
                android:layout_marginLeft="@dimen/fragment_my_favorite_text_margin_left"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_my_favorite_above"
                    />
                <TextView
                    android:id="@+id/tv_favorite_number_my_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFragmentMymyText"
                    android:text="0首"
                    />



            </LinearLayout>
            <ImageView
                android:layout_width="@dimen/fragment_my_favorite_image_width"
                android:layout_height="@dimen/fragment_my_favorite_image_width"
                android:src="@mipmap/btn_more_left_arrow_nor"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/fragment_my_lately_image_right_margin_right"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></LinearLayout>


    </LinearLayout>
</ScrollView>